@@ -1,5 +1,10 @@
  plugins {
-    id 'java'
+    id 'application'
+}
+
+application {
+    mainClass = 'ssd.assignment.DecentAuction'
+    applicationDefaultJvmArgs = ["--add-opens java.base/java.time=ALL-UNNAMED"]
 }
 
 group 'ssd.assignment'
